Added worflow for POST v1/schema/create Changed swagger schema TODO: 1) Add verifying all the fields in Taks 2) Add normal recasting for task status
